--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ body {
   color: #b3b3b3;
   position: relative;
   min-height: 100vh;
+  min-width: 320px;
 }
 body:before {
   content: '';
@@ -200,7 +201,8 @@ header {
   height: 100px;
   background: #fff;
   position: relative;
-  z-index: 99;
+  top: 0;
+  z-index: 9999;
 }
 .header {
   clear: both;
@@ -304,33 +306,35 @@ header {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 99;
+  z-index: 9999;
 }
 .overlay-show {
   display: block;
 }
+.cart-popup-show .cart-popup {
+  opacity: 1;
+  -webkit-transform: translateY(580px);
+  -moz-transform: translateY(580px);
+  transform: translateY(580px);
+}
 .cart-popup {
   position: absolute;
-  top: -20px;
+  top: -600px;
   right: 0;
   width: 385px;
-  height: 0;
+  height: 550px;
   overflow: hidden;
   background: #fff;
   border: 1px solid #e6e6e6;
   padding: 0 35px;
-  z-index: 999;
-  opacity: 0;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  transition: 0.5s;
+  z-index: 99999;
+  opacity: 1;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  transition: 0.3s;
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.cart-popup-show {
-  opacity: 1;
-  height: 550px;
 }
 .cart-popup__header {
   clear: both;
@@ -368,6 +372,8 @@ header {
   font-size: 14px;
   font-weight: 300;
   letter-spacing: 2px;
+  z-index: 99;
+  background: #fff;
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
   transition: 0.2s;
@@ -404,6 +410,7 @@ header {
   float: right;
   width: 204px;
   padding: 8px 0;
+  position: relative;
 }
 .ship-list__title {
   clear: both;
@@ -414,6 +421,31 @@ header {
   font-weight: 300;
   line-height: 16px;
   padding-bottom: 6px;
+  white-space: nowrap;
+}
+.ship-list__title:after {
+  content: '';
+  width: 30px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 99;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7db9e8+0,ffffff+100&0+0,1+100 */
+  background: -moz-linear-gradient(left, rgba(125, 185, 232, 0) 0%, #ffffff 100%);
+  /* FF3.6-15 */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(125, 185, 232, 0)), color-stop(100%, #ffffff));
+  /* Chrome4-9,Safari4-5 */
+  background: -webkit-linear-gradient(left, rgba(125, 185, 232, 0) 0%, #ffffff 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: -o-linear-gradient(left, rgba(125, 185, 232, 0) 0%, #ffffff 100%);
+  /* Opera 11.10-11.50 */
+  background: -ms-linear-gradient(left, rgba(125, 185, 232, 0) 0%, #ffffff 100%);
+  /* IE10 preview */
+  background: linear-gradient(to right, rgba(125, 185, 232, 0) 0%, #ffffff 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#007db9e8', endColorstr='#ffffff', GradientType=1);
+  /* IE6-9 */
 }
 .ship-list__total {
   font-size: 10px;
@@ -717,7 +749,7 @@ footer {
   right: 0;
   bottom: -161px;
   background: #fff;
-  z-index: 999;
+  z-index: 99;
   -webkit-transition: 0.4s;
   -moz-transition: 0.4s;
   transition: 0.4s;
@@ -739,7 +771,7 @@ footer .footer-open {
   position: absolute;
   top: 16px;
   right: 10px;
-  z-index: 99;
+  z-index: 99999;
 }
 footer .footer-open:before {
   content: '';
@@ -748,7 +780,7 @@ footer .footer-open:before {
   background: #cacaca;
   position: absolute;
   display: block;
-  transform: rotate(45deg);
+  transform: rotate(-45deg);
   left: 0;
   top: 3px;
   -webkit-border-radius: 100px;
@@ -765,7 +797,7 @@ footer .footer-open:after {
   background: #cacaca;
   position: absolute;
   display: block;
-  transform: rotate(-45deg);
+  transform: rotate(45deg);
   right: 0;
   top: 3px;
   -webkit-border-radius: 100px;
@@ -776,7 +808,10 @@ footer .footer-open:after {
   transition: 0.6s;
 }
 footer.show {
-  bottom: 0;
+  -webkit-transform: translateY(-161px);
+  -moz-transform: translateY(-161px);
+  transform: translateY(-161px);
+  z-index: 9999;
 }
 footer.show .footer-open:before {
   transform: rotate(315deg);
@@ -892,7 +927,9 @@ footer.show .footer-open:after {
   height: 11px;
   opacity: .4;
   margin: 0 13px 0 0;
-  background: url('../images/twitter.svg') 0 0 no-repeat;
+  background-image: url('../images/twitter.svg');
+  background-repeat: no-repeat;
+  background-size: 16px 11px;
 }
 .footer__menu li a.twitter:hover {
   opacity: 1;
@@ -904,7 +941,9 @@ footer.show .footer-open:after {
   height: 9px;
   opacity: .4;
   margin: 0 13px 0 0;
-  background: url('../images/vk.svg') 0 0 no-repeat;
+  background-size: 15px 9px;
+  background-image: url('../images/vk.svg');
+  background-repeat: no-repeat;
 }
 .footer__menu li a.vkontakte:hover {
   opacity: 1;
@@ -916,7 +955,9 @@ footer.show .footer-open:after {
   height: 12px;
   opacity: .4;
   margin: 0 13px 0 0;
-  background: url('../images/facebook.svg') 0 0 no-repeat;
+  background-size: 7px 12px;
+  background-image: url('../images/facebook.svg');
+  background-repeat: no-repeat;
 }
 .footer__menu li a.facebook:hover {
   opacity: 1;
@@ -927,8 +968,223 @@ footer.show .footer-open:after {
   width: 12px;
   height: 12px;
   opacity: .4;
-  background: url('../images/instagramm.svg') 0 0 no-repeat;
+  background-image: url('../images/instagramm.svg');
+  background-repeat: no-repeat;
 }
 .footer__menu li a.instagramm:hover {
   opacity: 1;
+}
+@media (max-width: 1200px) {
+  body.header__menu-vissible .header__menu {
+    -webkit-transform: translateX(-200px);
+    -moz-transform: translateX(-200px);
+    transform: translateX(-200px);
+  }
+  body.header__menu-vissible .header__menu-show {
+    -webkit-transform: translateX(-99px);
+    -moz-transform: translateX(-99px);
+    transform: translateX(-99px);
+  }
+  body.header__menu-vissible .header__menu-show span:after {
+    width: 20px;
+    right: -4px;
+    bottom: 3px;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  body.header__menu-vissible .header__menu-show span:before {
+    width: 20px;
+    right: -4px;
+    top: 3px;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  .cart-popup-show .cart-popup {
+    z-index: 9999;
+    -webkit-transform: translateY(550px);
+    -moz-transform: translateY(550px);
+    transform: translateY(550px);
+  }
+  .footer {
+    width: 100%;
+  }
+  .header {
+    width: 100%;
+  }
+  .header__logo {
+    left: 10px;
+  }
+  .header__menu {
+    position: fixed;
+    padding: 50px 0 0 0;
+    top: 0;
+    bottom: 0;
+    right: -200px;
+    width: 180px;
+    margin: 0;
+    overflow: visible;
+    z-index: 999;
+    background: #fff;
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    transition: 0.5s;
+  }
+  .header__menu-show {
+    position: absolute;
+    right: 22px;
+    top: 22px;
+    width: 30px;
+    height: 22px;
+    z-index: 9999;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    transition: 0.5s;
+  }
+  .header__menu-show span {
+    display: block;
+    width: 30px;
+    height: 4px;
+    margin: 9px 0;
+    background: #cccccc;
+  }
+  .header__menu-show span:before {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 4px;
+    background: #cccccc;
+    position: absolute;
+    top: 0;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    transition: 0.5s;
+  }
+  .header__menu-show span:after {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 4px;
+    background: #cccccc;
+    position: absolute;
+    bottom: 0;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    transition: 0.5s;
+  }
+  .header__menu li {
+    clear: both;
+    display: block;
+    width: 200px;
+    height: auto;
+    z-index: 999;
+    position: relative;
+    line-height: normal;
+  }
+  .header__menu li a {
+    display: block;
+    padding: 10px 30px;
+    overflow: hidden;
+    line-height: 24px;
+  }
+  .header__block {
+    margin-top: 48px;
+    padding: 0;
+  }
+}
+@media (max-width: 480px) {
+  a {
+    cursor: none !important;
+  }
+  body:before {
+    display: none;
+  }
+  header {
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: static;
+  }
+  .header {
+    position: static;
+  }
+  .header__logo {
+    font-size: 14px;
+    padding: 17px 0 0 4px;
+    line-height: 18px;
+  }
+  .header__block {
+    float: left;
+  }
+  .purchases {
+    position: static;
+  }
+  .cart-popup-show .cart-popup {
+    left: 10px;
+    right: 10px;
+    width: auto;
+    z-index: 9999;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    transition: 0.5s;
+    -webkit-transform: translateY(610px);
+    -moz-transform: translateY(610px);
+    transform: translateY(610px);
+  }
+  .ship-list__item-info {
+    float: left;
+    width: auto;
+    padding: 0 0 0 10px;
+    width: 70%;
+  }
+  .ship-list__item-img {
+    width: 30%;
+  }
+  .ship-list__item-img img {
+    display: block;
+    overflow: hidden;
+    width: 100%;
+  }
+  footer {
+    bottom: -272px;
+    cursor: none;
+  }
+  footer.show {
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-transform: translateY(-272px);
+    -moz-transform: translateY(-272px);
+    transform: translateY(-272px);
+  }
+  .footer {
+    height: 311px;
+    position: relative;
+  }
+  .footer__contacts {
+    padding: 0 10px 25px 10px;
+  }
+  .footer__info {
+    padding: 0 10px;
+  }
+  .footer__language {
+    display: none;
+  }
+  .footer__menu-social {
+    position: absolute;
+    right: 10px;
+    bottom: 0;
+    width: 23px;
+  }
+  .footer__menu-social a {
+    margin: 0 auto 23px auto !important;
+    display: block !important;
+    clear: both;
+    width: 15px !important;
+    background-position: center center !important;
+  }
 }
