--- a/less/style.less
+++ b/less/style.less
@@ -844,6 +844,13 @@ footer.show {
 		-moz-transform: translateY(550px);
 		transform: translateY(550px);
 	}
+	.container {
+		width: 100%;
+	}
+	.content__left {
+		width: 15%;
+		min-width: 170px;
+	}
 	.footer {
 		width: 100%;
 	}
@@ -925,6 +932,51 @@ footer.show {
 		}
 	}
 }
+@media(max-width: 598px) {
+	.filter {
+		text-align:center;
+		&__item {
+			padding: 0 15px;
+			text-align: left;
+			display: inline-block;
+			vertical-align: top;
+		}
+	}
+	.navigation {
+		padding: 0 0 30px 0;
+		&__level-1 {
+			& span {
+				margin: 0 3px;
+			}
+		}
+		&__level-2 {
+			font-size: 18px;
+			& span {
+				display: none;
+			}
+			& a {
+				clear: both;
+				display: block;
+			}
+		}
+	}
+	.content__left {
+		clear: both;
+		width: 100%;
+	}
+	.content__right {
+		clear: both;
+		width: 100% !important;
+		& .catalog {
+			&__item {
+				display: block;
+				margin: 0 auto;
+				padding: 0 15px 15px 15px;
+			}
+		}
+	}
+
+}
 @media(max-width: 480px) {
 	a {
 		cursor: none !important;
@@ -950,6 +1002,9 @@ footer.show {
 	.purchases {
 		position: static;
 	}
+	.cart-popup {
+		right: 10px;
+	}
 	.cart-popup-show .cart-popup {
 		left: 10px;
 		right: 10px;
@@ -969,7 +1024,7 @@ footer.show {
 				width: 70%;
 			}
 			&-img {
-				width: 30%;
+				width: 25%;
 				& img {
 					display: block;
 					overflow: hidden;
