--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,7 @@ header {
 .purchases {
   float: right;
   position: relative;
+  cursor: pointer;
 }
 .purchases__link {
   display: block;
@@ -327,7 +328,7 @@ header {
   top: -600px;
   right: 0;
   width: 385px;
-  height: 550px;
+  max-height: 550px;
   overflow: hidden;
   background: #fff;
   border: 1px solid #e6e6e6;
@@ -364,9 +365,8 @@ header {
   cursor: pointer;
 }
 .cart-popup__checkout {
-  position: absolute;
   display: block;
-  width: 100%;
+  margin: 0 -35px;
   height: 65px;
   bottom: 0;
   left: 0;
@@ -390,7 +390,8 @@ header {
 .ship-list {
   clear: both;
   display: block;
-  height: 350px;
+  height: 330px;
+  margin-bottom: 20px;
   overflow: auto;
 }
 .ship-list__item {
@@ -497,6 +498,7 @@ header {
   width: 1200px;
   padding: 0 15px;
   margin: auto;
+  padding: 0 0 100px 0;
   position: relative;
   z-index: 9;
 }
@@ -527,6 +529,9 @@ header {
   color: #808080;
 }
 .navigation__level-1 span {
+  display: none;
+}
+.navigation__level-1 span.wrp-1 {
   display: inline-block;
   margin: 0 25px;
 }
@@ -560,9 +565,16 @@ header {
   float: left;
   width: 270px;
 }
+.content__left-cnt {
+  width: 195px;
+  padding-right: 30px;
+}
 .content__right {
   float: right;
   width: 900px;
+}
+.content__right-cnt {
+  width: 965px;
 }
 .catalog {
   clear: both;
@@ -675,6 +687,11 @@ header {
   position: relative;
   margin: 0 0 3px 0;
 }
+.filter__item-list-3 {
+  display: inline-block;
+  margin: 0 5px 5px 0;
+  padding: 0;
+}
 .filter__item-inline {
   display: inline-block;
   margin: 0 5px 5px 0;
@@ -728,6 +745,35 @@ input.chck-size[type="checkbox"]:checked + label {
   color: #808080;
 }
 input.chck-size[type="checkbox"] + label {
+  display: block;
+  width: 31px;
+  height: 31px;
+  font-size: 10px;
+  line-height: 31px;
+  text-align: center;
+  border: 1px solid #cccccc;
+  text-transform: uppercase;
+  color: #cccccc;
+  cursor: pointer;
+  letter-spacing: 2px;
+  font-weight: 400;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+input.fltr-3[type="checkbox"] {
+  display: none;
+}
+input.fltr-3[type="checkbox"]:checked + label {
+  width: 31px;
+  height: 31px;
+  border: 1px solid #808080;
+  color: #808080;
+}
+input.fltr-3[type="checkbox"] + label {
   display: block;
   width: 31px;
   height: 31px;
@@ -816,7 +862,7 @@ footer.show {
   -webkit-transform: translateY(-161px);
   -moz-transform: translateY(-161px);
   transform: translateY(-161px);
-  z-index: 9999;
+  z-index: 999999;
 }
 footer.show .footer-open:before {
   transform: rotate(315deg);
@@ -863,14 +909,30 @@ footer.show .footer-open:after {
   display: block;
   overflow: hidden;
 }
+.footer__language-select.active-ru li {
+  color: #999999;
+}
+.footer__language-select.active-en li {
+  color: #999999;
+}
 .footer__language-select li {
   clear: both;
   display: block;
   overflow: hidden;
   font-size: 10px;
-  color: #999999;
+  color: #cacaca;
   line-height: 34px;
   text-transform: uppercase;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+.footer__language-select li:hover {
+  color: #808080;
+}
+.footer__language-select li.active {
+  color: #999999;
 }
 .footer__language-select li a {
   color: #cacaca;
@@ -905,6 +967,9 @@ footer.show .footer-open:after {
   overflow: hidden;
   list-style: none;
 }
+.footer__menu-mail {
+  letter-spacing: -0.01em;
+}
 .footer__menu li {
   clear: both;
   display: block;
@@ -924,6 +989,20 @@ footer.show .footer-open:after {
 }
 .footer__menu li a:hover {
   color: #808080;
+}
+.footer__menu li a.pinterest {
+  display: inline-block;
+  vertical-align: middle;
+  width: 12px;
+  height: 12px;
+  opacity: .4;
+  margin: 0 13px 0 0;
+  background-image: url('../images/pinterest.svg');
+  background-repeat: no-repeat;
+  background-size: 12px 12px;
+}
+.footer__menu li a.pinterest:hover {
+  opacity: 1;
 }
 .footer__menu li a.twitter {
   display: inline-block;
@@ -978,6 +1057,228 @@ footer.show .footer-open:after {
 }
 .footer__menu li a.instagramm:hover {
   opacity: 1;
+}
+.warning {
+  text-align: center;
+  font-weight: 300;
+  font-size: 14px;
+  color: #CE5252;
+  height: 0;
+  padding: 40px 0 0 0;
+}
+.autorization {
+  clear: both;
+  display: block;
+  color: #3C3C3C;
+  max-width: 370px;
+}
+.autorization .button {
+  float: left;
+  width: 85px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  font-weight: 300;
+  font-family: 'Circe-fnt';
+  font-size: 14px;
+  letter-spacing: 3px;
+  cursor: pointer;
+  border: 1px solid #808080;
+  background: none;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+.autorization .button:hover {
+  background: #808080;
+  color: #fff;
+}
+.autorization .forgot {
+  float: right;
+  overflow: hidden;
+  line-height: 40px;
+  font-weight: 300;
+  margin-right: 20px;
+  color: #979797;
+  letter-spacing: 3px;
+}
+.autorization__title {
+  font-size: 37px;
+  letter-spacing: 5px;
+  font-weight: 300;
+  color: #3C3C3C;
+  line-height: 37px;
+  padding: 85px 0 65px 0;
+}
+.autorization__title a {
+  display: inline-block;
+  font-size: 14px;
+  padding: 0 0 0 50px;
+  color: #808080;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+.autorization__title a:hover {
+  color: #cacaca;
+}
+.autorization .input {
+  display: block;
+  width: 100%;
+  height: 50px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+  background: none;
+  border: none;
+  padding: 0 30px;
+  z-index: 99;
+  font-weight: 300;
+  font-family: 'Circe-fnt';
+  font-size: 14px;
+  letter-spacing: 3px;
+}
+.autorization-item {
+  clear: both;
+  display: block;
+  position: relative;
+  margin: 0 0 25px 0;
+  background: #f5f5f8;
+  border: 1px solid #808080;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+  max-width: 370px;
+}
+.autorization-item-last {
+  padding: 25px 0 0 0;
+  height: auto;
+  border: none;
+  background: none;
+}
+.autorization-item__title {
+  overflow: hidden;
+  font-size: 14px;
+  color: #808080;
+  font-weight: 300;
+  top: 18px;
+  left: 20px;
+  padding: 0 10px;
+  height: 14px;
+  line-height: 14px;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+  position: absolute;
+}
+.autorization-item__title-up {
+  top: -8px;
+}
+.input-block {
+  display: block;
+  width: 100%;
+  height: 50px;
+  background: #f5f5f8;
+  border: 1px solid #808080;
+  padding: 0 30px;
+  font-weight: 300;
+  font-family: 'Circe-fnt';
+  font-size: 14px;
+  letter-spacing: 3px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+}
+.registration {
+  clear: both;
+  display: block;
+}
+.registration__item {
+  clear: both;
+  display: block;
+  position: relative;
+  padding: 0 0 25px 0;
+}
+.registration__left {
+  float: left;
+  overflow: hidden;
+  min-width: 370px;
+}
+.registration__right {
+  float: left;
+  overflow: hidden;
+  min-width: 370px;
+  padding: 0 0 0 25px;
+}
+.registration .buttons {
+  clear: both;
+  display: block;
+}
+.registration .buttons__frst {
+  clear: both;
+  display: block;
+  padding: 20px 0;
+}
+.registration .buttons a {
+  display: inline-block;
+  margin: 0 0 0 15px;
+  color: #89C5C3;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 3px;
+}
+.registration .buttons .button {
+  display: block;
+  height: 40px;
+  line-height: 40px;
+  font-weight: 300;
+  font-family: 'Circe-fnt';
+  font-size: 14px;
+  border: 1px solid #808080;
+  background: none;
+  cursor: pointer;
+  color: #808080;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+  padding: 0 18px;
+  letter-spacing: 2px;
+}
+.registration .buttons .button:hover {
+  color: #fff;
+  background: #808080;
+}
+input[type="checkbox"] {
+  display: none;
+}
+input[type="checkbox"] + label {
+  font: 18px bold;
+  color: #444;
+  cursor: pointer;
+}
+input[type="checkbox"] + label::before {
+  content: "";
+  display: inline-block;
+  height: 14px;
+  width: 14px;
+  background: #f5f5f8;
+  border: 1px solid #808080;
+  vertical-align: middle;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+input[type="checkbox"]:checked + label::before {
+  background: #89C5C3;
 }
 @media (max-width: 1200px) {
   body.header__menu-vissible .header__menu {
@@ -1109,6 +1410,23 @@ footer.show .footer-open:after {
   }
 }
 @media (max-width: 780px) {
+  .registration__right {
+    padding: 0;
+  }
+  .autorization__title a {
+    display: block;
+    padding: 0;
+    clear: both;
+  }
+  .warning {
+    line-height: normal;
+    padding: 20px 10px;
+    height: auto;
+  }
+  .autorization__title {
+    font-size: 30px;
+    padding: 0 0 25px 0;
+  }
   .filter {
     text-align: center;
   }
@@ -1121,7 +1439,7 @@ footer.show .footer-open:after {
   .navigation {
     padding: 0 0 30px 0;
   }
-  .navigation__level-1 span {
+  .navigation__level-1 span.wrp-1 {
     margin: 0 3px;
   }
   .navigation__level-2 {
@@ -1242,4 +1560,56 @@ footer.show .footer-open:after {
     width: 15px !important;
     background-position: center center !important;
   }
+}
+.tst {
+  position: absolute;
+  z-index: 9999;
+  top: 0;
+  right: 0;
+}
+.cnt {
+  padding-top: 85px;
+}
+.cnt p {
+  color: #4D4D4D;
+  font-size: 14px;
+  letter-spacing: 2px;
+  font-weight: 300;
+  margin: 0 0 15px 0;
+  line-height: 20px;
+}
+.cnt h1 {
+  font-size: 37px;
+  letter-spacing: 5px;
+  font-weight: 300;
+  color: #3C3C3C;
+  line-height: 37px;
+  padding: 0 0 40px 0;
+}
+.left-menu {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  list-style: none;
+}
+.left-menu li {
+  clear: both;
+  display: block;
+  overflow: hidden;
+}
+.left-menu li a {
+  display: block;
+  overflow: hidden;
+  font-size: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding: 13px 0;
+  font-weight: 300;
+  color: #CACACA;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+}
+.left-menu li a:hover {
+  color: #808080;
 }
