--- a/less/style.less
+++ b/less/style.less
@@ -2,15 +2,14 @@
 @import "fonts.less";
 @import "texts.less";
 
-
-@text-color: 			#b3b3b3; // цвет основного текста
+@text-color: 			#b3b3b3;	// цвет основного текста
 @green: 				#89C5C3;
 @gray-dark: 			#808080;
 @gray-light: 			#999999;
 @gray-lighter: 			#cccccc;
 @gray: 					#cacaca;
 @gray-border: 			#e6e6e6;
-@left-menu-show: 		.5s;	 // скорость появления менюшки справа на адаптиве
+@left-menu-show: 		.5s;		// скорость появления менюшки справа на адаптиве
 
 *, *:after, *:before {
     -webkit-box-sizing: border-box;
@@ -175,6 +174,7 @@ header {
 .purchases {
 	float: right;
 	position: relative;
+	cursor: pointer;
 	&__link {
 		display: block;
 		color: @gray-light;
@@ -215,7 +215,7 @@ header {
 	top: -600px;
 	right: 0;
 	width: 385px;
-	height: 550px;
+	max-height: 550px;
 	overflow: hidden;
 	background: #fff;
 	border: 1px solid @gray-border;
@@ -248,9 +248,8 @@ header {
 		cursor: pointer;
 	}
 	&__checkout {
-		position: absolute;
 		display: block;
-		width: 100%;
+		margin: 0 -35px;
 		height: 65px;
 		bottom: 0;
 		left: 0;
@@ -273,7 +272,8 @@ header {
 .ship-list {
 	clear: both;
 	display: block;
-	height: 350px;
+	height: 330px;
+	margin-bottom: 20px;
 	overflow: auto;
 	&__item {
 		clear: both;
@@ -364,6 +364,7 @@ header {
 }
 .container {
 	.wrapper();
+	padding: 0 0 100px 0;
 	position: relative;
 	z-index: 9;
 }
@@ -390,6 +391,9 @@ header {
 			}
 		}
 		& span {
+			display: none;
+		}
+		& span.wrp-1 {
 			display: inline-block;
 			margin: 0 25px;
 		}
@@ -421,10 +425,17 @@ header {
 	&__left {
 		float: left;
 		width: 270px;
+		&-cnt {
+			width: 195px;
+			padding-right: 30px;
+		}
 	}
 	&__right {
 		float: right;
 		width: 900px;
+		&-cnt {
+			width: 965px;
+		}
 	}
 }
 .catalog {
@@ -529,6 +540,11 @@ header {
 			padding: 0 0 0 15px;
 			position: relative;
 			margin: 0 0 3px 0;
+			&-3 {
+				display: inline-block;
+				margin:	0 5px 5px 0;
+				padding: 0;
+			}
 		}
 		&-inline {
 			display: inline-block;
@@ -582,6 +598,33 @@ input.chck-size[type="checkbox"] {
 	}
 }
 input.chck-size[type="checkbox"] + label {
+	display: block;
+	width: 31px;
+	height: 31px;
+	font-size: 10px;
+	line-height: 31px;
+	text-align: center;
+	border: 1px solid @gray-lighter;
+	text-transform: uppercase;
+	color: @gray-lighter;
+	cursor: pointer;
+	letter-spacing: 2px;
+	font-weight: 400;
+	.radius(10px);
+	.transition();
+}
+
+input.fltr-3[type="checkbox"] {
+	display: none;
+	&:checked + label {
+		width: 31px;
+		height: 31px;
+		color: @gray-dark;
+		border: 1px solid @gray-dark;
+		color: @gray-dark;
+	}
+}
+input.fltr-3[type="checkbox"] + label {
 	display: block;
 	width: 31px;
 	height: 31px;
@@ -658,7 +701,7 @@ footer.show {
 	-webkit-transform: translateY(-161px);
 	-moz-transform: translateY(-161px);
 	transform: translateY(-161px);
-	z-index: 9999;
+	z-index: 999999;
 	& .footer-open {
 		&:before {
 			transform: rotate(315deg);
@@ -699,14 +742,28 @@ footer.show {
 			list-style: none;
 			display: block;
 			overflow: hidden;
+			&.active-ru li {
+				color: @gray-light;
+			}
+			&.active-en li {
+				color: @gray-light;
+			}
 			& li {
 				clear: both;
 				display: block;
 				overflow: hidden;
 				font-size: 10px;
-				color: @gray-light;
+				color: @gray;
 				line-height: 34px;
 				text-transform: uppercase;
+				cursor: pointer;
+				.transition();
+				&:hover {
+					color: @gray-dark;
+				}
+				&.active {
+					color: @gray-light;
+				}
 				& a {
 					color: @gray;
 					.transition();
@@ -740,6 +797,9 @@ footer.show {
 		display: block;
 		overflow: hidden;
 		list-style: none;
+		&-mail {
+			letter-spacing: -.01em;
+		}
 		& li {
 			clear: both;
 			display: block;
@@ -755,6 +815,20 @@ footer.show {
 				.transition();
 				&:hover {
 					color: @gray-dark;
+				}
+				&.pinterest {
+					display: inline-block;
+					vertical-align: middle;
+					width: 12px;
+					height: 12px;
+					opacity: .4;
+					margin: 0 13px 0 0;
+					background-image: url('../images/pinterest.svg');
+					background-repeat: no-repeat;
+					background-size: 12px 12px;
+					&:hover {
+						opacity: 1;
+					}
 				}
 				&.twitter {
 					display: inline-block;
@@ -814,6 +888,233 @@ footer.show {
 		}
 	}
 }
+.warning {
+	text-align: center;
+	font-weight: 300;
+	font-size: 14px;
+	color: #CE5252;
+	height: 0;
+	padding: 40px 0 0 0;
+}
+.autorization {
+	clear: both;
+	display: block;
+	color: #3C3C3C;
+	max-width: 370px;
+	& .button {
+		float: left;
+		width: 85px;
+		height: 40px;
+		text-align: center;
+		line-height: 40px;
+		font-weight: 300;
+		font-family: 'Circe-fnt';
+		font-size: 14px;
+		letter-spacing: 3px;
+		cursor: pointer;
+		border: 1px solid #808080;
+		background: none;
+		.radius(9px);
+		.transition();
+		&:hover {
+			background: #808080;
+			color: #fff;
+		}
+	}
+	& .forgot {
+		float: right;
+		overflow: hidden;
+		line-height: 40px;
+		font-weight: 300;
+		margin-right: 20px;
+		color: #979797;
+		letter-spacing: 3px;
+	}
+	&__title {
+		font-size: 37px;
+		letter-spacing: 5px;
+		font-weight: 300;
+		color: #3C3C3C;
+		line-height: 37px;
+		padding: 85px 0 65px 0;
+		& a {
+			display: inline-block;
+			font-size: 14px;
+			padding: 0 0 0 50px;
+			color: @gray-dark;
+			.transition();
+			&:hover {
+				color: @gray;
+			} 
+		}
+	}
+	& .input {
+		display: block;
+		width: 100%;
+		height: 50px;
+		.radius(9px);
+		background: none;
+		border: none;
+		padding: 0 30px;
+		z-index: 99;
+		font-weight: 300;
+		font-family: 'Circe-fnt';
+		font-size: 14px;
+		letter-spacing: 3px;
+	}
+	&-item {
+		clear: both;
+		display: block;
+		position: relative;
+		margin: 0 0 25px 0;
+		background: #f5f5f8;
+		border: 1px solid #808080;
+		.radius(9px);
+		max-width: 370px;
+		&-last {
+			padding: 25px 0 0 0;
+			height: auto;
+			border: none;
+			background: none;
+		}
+		&__title {
+			overflow: hidden;
+			font-size: 14px;
+			color: #808080;
+			font-weight: 300;
+			position: absolute;
+			top: 18px;
+			left: 20px;
+			padding: 0 10px;
+			height: 14px;
+			line-height: 14px;
+			.transition();
+			position: absolute;
+			&-up {
+				top: -8px;
+			}
+		}
+	}
+}
+.input-block {
+	display: block;
+	width: 100%;
+	height: 50px;
+	background: #f5f5f8;
+	border: 1px solid #808080;
+	padding: 0 30px;
+	font-weight: 300;
+	font-family: 'Circe-fnt';
+	font-size: 14px;
+	letter-spacing: 3px;
+	.radius(9px);
+}
+.registration {
+	clear: both;
+	display: block;
+	&__item {
+		clear: both;
+		display: block;
+		position: relative;
+		padding: 0 0 25px 0;
+	}
+	&__left {
+		float: left;
+		overflow: hidden;
+		min-width: 370px;
+	}
+	&__right {
+		float: left;
+		overflow: hidden;
+		min-width: 370px;
+		padding: 0 0 0 25px;
+	}
+	& .buttons {
+		clear: both;
+		display: block;
+		&__frst {
+			clear: both;
+			display: block;
+			padding: 20px 0;
+		}
+		& a {
+			display: inline-block;
+			margin: 0 0 0 15px;
+			color: #89C5C3;
+			font-size: 14px;
+			font-weight: 300;
+			letter-spacing: 3px;
+		}
+		& .button {
+			display: block;
+			height: 40px;
+			line-height: 40px;
+			font-weight: 300;
+			font-family: 'Circe-fnt';
+			font-size: 14px;
+			border: 1px solid #808080;
+			background: none;
+			cursor: pointer;
+			color: #808080;
+			.radius(9px);
+			.transition();
+			padding: 0 18px;
+			letter-spacing: 2px;
+			&:hover {
+				color: #fff;
+				background: #808080;
+			}
+		}
+	}
+}
+
+input[type="checkbox"] {
+    display:none;            
+}
+input[type="checkbox"] + label {
+  font: 18px bold;
+  color: #444;
+  cursor: pointer;
+}
+input[type="checkbox"] + label::before {
+    content: "";
+    display: inline-block;
+    height: 14px;
+    width: 14px;
+    background: #f5f5f8;
+    border: 1px solid #808080;
+    vertical-align: middle;
+    .transition();
+    .radius(4px);
+}
+input[type="checkbox"]:checked + label::before {
+    background: #89C5C3;
+}
+
+// input.input[type="text"] + label {
+// 	font-size: 10px;
+// 	text-transform: uppercase;
+// 	color: @gray-lighter;
+// 	cursor: pointer;
+// 	letter-spacing: 2px;
+// 	font-weight: 300;
+// 	.transition();
+// 	&:before {
+// 		content: '';
+// 		position: absolute;
+// 		left: 0;
+// 		display: block;
+// 		vertical-align: middle;
+// 		width: 9px;
+// 		height: 9px;
+// 		top: 50%;
+// 		margin-top: -6px;
+// 		border: 1px solid @gray-border;
+// 		.radius();
+// 		.transition();
+// 	}
+// }
+
 @media(max-width: 1200px) {
 	body.header__menu-vissible .header__menu {
 		-webkit-transform: translateX(-200px);
@@ -938,9 +1239,23 @@ footer.show {
 	}
 }
 @media(max-width: 780px) {
-
-}
-@media(max-width: 780px) {
+	.registration__right {
+		padding: 0;
+	}
+	.autorization__title a {
+		display: block;
+		padding: 0;
+		clear: both;
+	}
+	.warning {
+		line-height: normal;
+		padding: 20px 10px;
+		height: auto;
+	}
+	.autorization__title {
+		font-size: 30px;
+		padding: 0 0 25px 0;
+	}
 	.filter {
 		text-align:center;
 		&__item {
@@ -953,7 +1268,7 @@ footer.show {
 	.navigation {
 		padding: 0 0 30px 0;
 		&__level-1 {
-			& span {
+			& span.wrp-1 {
 				margin: 0 3px;
 			}
 		}
@@ -1076,6 +1391,56 @@ footer.show {
 					width: 15px !important;
 					background-position: center center !important;
 				}
+			}
+		}
+	}
+}
+.tst {
+	position: absolute;
+	z-index: 9999;
+	top: 0;
+	right: 0;
+}
+.cnt {
+	padding-top: 85px;
+	& p {
+		color: #4D4D4D;
+		font-size: 14px;
+		letter-spacing: 2px;
+		font-weight: 300;
+		margin: 0 0 15px 0;
+		line-height: 20px;
+	}
+	h1 {
+	    font-size: 37px;
+	    letter-spacing: 5px;
+	    font-weight: 300;
+	    color: #3C3C3C;
+	    line-height: 37px;
+	    padding: 0 0 40px 0;
+	}
+}
+.left-menu {
+	clear: both;
+	display: block;
+	overflow: hidden;
+	list-style: none;
+	& li {
+		clear: both;
+		display: block;
+		overflow: hidden;
+		& a {
+			display: block;
+			overflow: hidden;
+			font-size: 10px;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+			padding: 13px 0;
+			font-weight: 300;
+			color: #CACACA;
+			.transition();
+			&:hover {
+				color: #808080;
 			}
 		}
 	}
